--- a/src/index.html
+++ b/src/index.html
@@ -15,25 +15,32 @@
     <span id="rubandev">beta</span>
     <div id="term"></div>
     <!--<iframe id="pogen" style="display:none;"></iframe>-->
-    <script type="text/javascript" src="./js/engine/js.js"></script>
-    <script type="text/javascript" src="./js/_build/terminus.dialog.fr.js"></script>
+    <script type="text/javascript" src="./js/engine/seq.js"></script>
+    <script type="text/javascript" src="./js/engine/dom.js"></script>
+    <script type="text/javascript" src="./js/engine/random.js"></script>
+    <script type="text/javascript" src="./js/engine/object.js"></script>
+    <script type="text/javascript" src="./js/engine/string.js"></script>
+    <script type="text/javascript" src="./js/engine/array.js"></script>
     <script type="text/javascript" src="./js/background.js"></script>
+    <script type="text/javascript" src="./js/_build/terminus.dialog.fr.js"></script>
     <script type="text/javascript" src="./js/engine/lang/pogen.js"></script>
     <script type="text/javascript" src="./js/engine/lang/Gettext.js"></script>
     <script type="text/javascript" src="./js/engine/state/Cookie.js"></script>
     <script type="text/javascript" src="./js/engine/state/GameState.js"></script>
     <script type="text/javascript" src="./js/engine/state/EventTarget.js"></script>
+    <script type="text/javascript" src="./js/engine/filesystem/mode.js"></script>
     <script type="text/javascript" src="./js/engine/filesystem/file.js"></script>
     <script type="text/javascript" src="./js/engine/filesystem/directory.js"></script>
     <script type="text/javascript" src="./js/engine/interface/howler.core.js"></script>
     <script type="text/javascript" src="./js/engine/interface/Sound.js"></script>
     <script type="text/javascript" src="./js/engine/interface/Music.js"></script>
-    <script type="text/javascript" src="./js/engine/interface/VTerm.js"></script>
     <script type="text/javascript" src="./js/engine/interface/Pic.js"></script>
+    <script type="text/javascript" src="./js/engine/interface/Waiter.js"></script>
+    <script type="text/javascript" src="./js/engine/interface/VTerm.js"></script>
+    <script type="text/javascript" src="./js/engine/interface/effects.js"></script>
     <script type="text/javascript" src="./js/engine/commandline/Context.js"></script>
     <script type="text/javascript" src="./js/engine/commandline/CommandStore.js"></script>
     <script type="text/javascript" src="./js/engine/commandline/Parse.js"></script>
-    <script type="text/javascript" src="./js/engine/commandline/ReturnSequence.js"></script>
     <script type="text/javascript" src="./js/engine/commandline/psychologist.js"></script>
     <script type="text/javascript" src="./js/engine/commands/less.js"></script>
     <script type="text/javascript" src="./js/engine/commands/cd.js"></script>
@@ -57,7 +64,7 @@
     <script type="text/javascript" src="./js/terminus.gamestart.js"></script>
     <script type="text/javascript" src="./js/terminus.level1.js"></script>
     <script type="text/javascript" src="./js/terminus.level2.js"></script>
-    <script type="text/javascript" src="../tests/Testing.js"></script>
+    <!--<script type="text/javascript" src="../tests/Testing.js"></script>-->
 <!--    <script type="text/javascript" src="../tests/test_academy.js"></script>-->
 <!--    <script type="text/javascript" src="../tests/test_commands.js"></script>-->
 <!--    <script type="text/javascript" src="../tests/test_battlescene.js"></script>-->
