--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <!-- technical details -->
     <meta charset="utf-8" />
-    <title>Terminus</title>
-    <meta name="description"
-          content="The last and the first destination">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=edge" />
-    <meta name="author" content="luffah <contact@luffah.xyz>"/>
-    <meta name="author" content="Shawn Conrad, Michele Pratusevich <michele.pratusevich@gmail.com>"/>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <!-- description -->
+    <title>Terminus</title>
+    <meta name="applicatiom-name" content="Terminus"/>
+    <meta name="description"      content="The last and the first destination"/>
+    <meta name="keywords"         content="terminal, game, command-line, linux"/>
+    <meta name="author"           content="luffah"/>
+    <!-- style definition -->
     <link href="./css/terminus.css" rel="stylesheet"/>
   </head>
   <body>
+    <!-- main elements -->
     <span id="rubandev">beta</span>
     <div id="term"></div>
+
+    <!-- scripts -->
     <!--<iframe id="pogen" style="display:none;"></iframe>-->
     <script type="text/javascript" src="./js/engine/seq.js"></script>
     <script type="text/javascript" src="./js/engine/dom.js"></script>
@@ -64,10 +71,5 @@
     <script type="text/javascript" src="./js/terminus.gamestart.js"></script>
     <script type="text/javascript" src="./js/terminus.level1.js"></script>
     <script type="text/javascript" src="./js/terminus.level2.js"></script>
-    <!--<script type="text/javascript" src="../tests/Testing.js"></script>-->
-<!--    <script type="text/javascript" src="../tests/test_academy.js"></script>-->
-<!--    <script type="text/javascript" src="../tests/test_commands.js"></script>-->
-<!--    <script type="text/javascript" src="../tests/test_battlescene.js"></script>-->
-<!--    <script type="text/javascript" src="../tests/autoexplore.js"></script>-->
   </body>
 </html>
