[FIX #22 #38] tente de fournir une procédure pour les traduction

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,11 @@
     <!-- main elements -->
     <span id="rubandev">beta</span>
     <div id="term"></div>
-
-    <!-- scripts -->
     <!--<iframe id="pogen" style="display:none;"></iframe>-->
+
+    <!-- lang data -->
+    <script type="text/javascript" src="./js/_build/terminus.dialog.fr.js"></script>
+    <!-- scripts -->
     <script type="text/javascript" src="./js/engine/seq.js"></script>
     <script type="text/javascript" src="./js/engine/dom.js"></script>
     <script type="text/javascript" src="./js/engine/random.js"></script>
@@ -29,7 +31,6 @@
     <script type="text/javascript" src="./js/engine/string.js"></script>
     <script type="text/javascript" src="./js/engine/array.js"></script>
     <script type="text/javascript" src="./js/background.js"></script>
-    <script type="text/javascript" src="./js/_build/terminus.dialog.fr.js"></script>
     <script type="text/javascript" src="./js/engine/lang/pogen.js"></script>
     <script type="text/javascript" src="./js/engine/lang/Gettext.js"></script>
     <script type="text/javascript" src="./js/engine/state/Cookie.js"></script>
