--- a/src/testing.html
+++ b/src/testing.html
@@ -21,14 +21,14 @@
   var __xhr = new XMLHttpRequest()
   __xhr.open("GET","index.html")
   __xhr.setRequestHeader('Content-type',
-    'application/x-www-form-urlencoded; charset=utf-8;');
+    'application/x-www-form-urlencoded; charset=utf-8;')
   __xhr.onreadystatechange = function(){
     if (__xhr.readyState == 4 && __xhr.status == 200) {
       __el.innerHTML=__xhr.responseText
       __body = __el.getElementsByTagName('body')[0]
       __tests.forEach((t) => {
          let node = document.createElement('script')
-         node.type = "text/javascript";
+         node.type = "text/javascript"
          node.setAttribute('src', t)
          __body.appendChild(node)
       })
