[WIP] fix callbacks

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
     <script type="text/javascript" src="./js/engine/commands/exit.js"></script>
     <script type="text/javascript" src="./js/engine/commands/grep.js"></script>
     <script type="text/javascript" src="./js/engine/commands/help.js"></script>
+    <script type="text/javascript" src="./js/engine/commands/groups.js"></script>
+    <script type="text/javascript" src="./js/engine/commands/whoami.js"></script>
     <script type="text/javascript" src="./js/engine/commands/ls.js"></script>
     <script type="text/javascript" src="./js/engine/commands/man.js"></script>
     <script type="text/javascript" src="./js/engine/commands/mkdir.js"></script>
