[WIP] experimental syntax

--- a/src/testing.html
+++ b/src/testing.html
@@ -11,8 +11,8 @@
    */
   var __tests =[
     '../tests/Testing.js',
-    //'../tests/test_commands.js',
-    '../tests/test_academy.js',
+    '../tests/test_commands.js',
+    //'../tests/test_academy.js',
     //'../tests/test_battlescene.js',
     //'../tests/autoexplore.js',
   ]
