[WIP] link management in filesystem

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="./js/engine/filesystem/mode.js"></script>
     <script type="text/javascript" src="./js/engine/filesystem/file.js"></script>
     <script type="text/javascript" src="./js/engine/filesystem/directory.js"></script>
+    <script type="text/javascript" src="./js/engine/filesystem/link.js"></script>
     <script type="text/javascript" src="./js/engine/interface/howler.core.js"></script>
     <script type="text/javascript" src="./js/engine/interface/Sound.js"></script>
     <script type="text/javascript" src="./js/engine/interface/Music.js"></script>
