[WIP] add links feature

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,6 @@
     <script type="text/javascript" src="./js/engine/object.js"></script>
     <script type="text/javascript" src="./js/engine/string.js"></script>
     <script type="text/javascript" src="./js/engine/array.js"></script>
-    <script type="text/javascript" src="./js/background.js"></script>
     <script type="text/javascript" src="./js/engine/lang/pogen.js"></script>
     <script type="text/javascript" src="./js/engine/lang/Gettext.js"></script>
     <script type="text/javascript" src="./js/engine/state/Cookie.js"></script>
@@ -46,7 +45,6 @@
     <script type="text/javascript" src="./js/engine/interface/Pic.js"></script>
     <script type="text/javascript" src="./js/engine/interface/Waiter.js"></script>
     <script type="text/javascript" src="./js/engine/interface/VTerm.js"></script>
-    <script type="text/javascript" src="./js/engine/interface/effects.js"></script>
     <script type="text/javascript" src="./js/engine/commandline/Context.js"></script>
     <script type="text/javascript" src="./js/engine/commandline/CommandStore.js"></script>
     <script type="text/javascript" src="./js/engine/commandline/Parse.js"></script>
@@ -70,6 +68,8 @@
     <script type="text/javascript" src="./js/engine/commands/unzip.js"></script>
     <script type="text/javascript" src="./js/engine/commands/_groups.js"></script>
     <script type="text/javascript" src="./js/engine/commands/_poedit.js"></script>
+    <script type="text/javascript" src="./js/background.js"></script>
+    <script type="text/javascript" src="./js/effects.js"></script>
     <script type="text/javascript" src="./js/terminus.utils.js"></script>
     <script type="text/javascript" src="./js/terminus.assets.js"></script>
     <script type="text/javascript" src="./js/terminus.gamestart.js"></script>
