--- a/src/index.html
+++ b/src/index.html
@@ -24,50 +24,50 @@
     <!-- lang data -->
     <script type="text/javascript" src="./js/_build/terminus.dialog.fr.js"></script>
     <!-- scripts -->
-    <script type="text/javascript" src="./js/engine/seq.js"></script>
-    <script type="text/javascript" src="./js/engine/dom.js"></script>
-    <script type="text/javascript" src="./js/engine/random.js"></script>
-    <script type="text/javascript" src="./js/engine/object.js"></script>
-    <script type="text/javascript" src="./js/engine/string.js"></script>
-    <script type="text/javascript" src="./js/engine/array.js"></script>
-    <script type="text/javascript" src="./js/engine/lang/pogen.js"></script>
-    <script type="text/javascript" src="./js/engine/lang/Gettext.js"></script>
-    <script type="text/javascript" src="./js/engine/state/Cookie.js"></script>
-    <script type="text/javascript" src="./js/engine/state/GameState.js"></script>
-    <script type="text/javascript" src="./js/engine/state/EventTarget.js"></script>
-    <script type="text/javascript" src="./js/engine/filesystem/mode.js"></script>
-    <script type="text/javascript" src="./js/engine/filesystem/file.js"></script>
-    <script type="text/javascript" src="./js/engine/filesystem/directory.js"></script>
-    <script type="text/javascript" src="./js/engine/filesystem/link.js"></script>
-    <script type="text/javascript" src="./js/engine/interface/howler.core.js"></script>
-    <script type="text/javascript" src="./js/engine/interface/Sound.js"></script>
-    <script type="text/javascript" src="./js/engine/interface/Music.js"></script>
-    <script type="text/javascript" src="./js/engine/interface/Pic.js"></script>
-    <script type="text/javascript" src="./js/engine/interface/Waiter.js"></script>
-    <script type="text/javascript" src="./js/engine/interface/VTerm.js"></script>
-    <script type="text/javascript" src="./js/engine/commandline/Context.js"></script>
-    <script type="text/javascript" src="./js/engine/commandline/CommandStore.js"></script>
-    <script type="text/javascript" src="./js/engine/commandline/Parse.js"></script>
-    <script type="text/javascript" src="./js/engine/commandline/psychologist.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/less.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/cd.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/cp.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/exit.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/grep.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/help.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/groups.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/whoami.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/ls.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/man.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/mkdir.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/mv.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/pwd.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/rm.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/sudo.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/touch.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/unzip.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/_groups.js"></script>
-    <script type="text/javascript" src="./js/engine/commands/_poedit.js"></script>
+    <script type="text/javascript" src="./js/shell/seq.js"></script>
+    <script type="text/javascript" src="./js/shell/dom.js"></script>
+    <script type="text/javascript" src="./js/shell/random.js"></script>
+    <script type="text/javascript" src="./js/shell/object.js"></script>
+    <script type="text/javascript" src="./js/shell/string.js"></script>
+    <script type="text/javascript" src="./js/shell/array.js"></script>
+    <script type="text/javascript" src="./js/shell/lang/pogen.js"></script>
+    <script type="text/javascript" src="./js/shell/lang/Gettext.js"></script>
+    <script type="text/javascript" src="./js/shell/state/Cookie.js"></script>
+    <script type="text/javascript" src="./js/shell/state/GameState.js"></script>
+    <script type="text/javascript" src="./js/shell/state/EventTarget.js"></script>
+    <script type="text/javascript" src="./js/shell/filesystem/mode.js"></script>
+    <script type="text/javascript" src="./js/shell/filesystem/file.js"></script>
+    <script type="text/javascript" src="./js/shell/filesystem/directory.js"></script>
+    <script type="text/javascript" src="./js/shell/filesystem/link.js"></script>
+    <script type="text/javascript" src="./js/shell/interface/howler.core.js"></script>
+    <script type="text/javascript" src="./js/shell/interface/Sound.js"></script>
+    <script type="text/javascript" src="./js/shell/interface/Music.js"></script>
+    <script type="text/javascript" src="./js/shell/interface/Image.js"></script>
+    <script type="text/javascript" src="./js/shell/interface/Waiter.js"></script>
+    <script type="text/javascript" src="./js/shell/interface/VTerm.js"></script>
+    <script type="text/javascript" src="./js/shell/commandline/Context.js"></script>
+    <script type="text/javascript" src="./js/shell/commandline/CommandStore.js"></script>
+    <script type="text/javascript" src="./js/shell/commandline/Parse.js"></script>
+    <script type="text/javascript" src="./js/shell/commandline/psychologist.js"></script>
+    <!--<script type="text/javascript" src="./js/shell/builtins/alias.js"></script>-->
+    <script type="text/javascript" src="./js/shell/builtins/cd.js"></script>
+    <script type="text/javascript" src="./js/shell/builtins/exit.js"></script>
+    <script type="text/javascript" src="./js/shell/builtins/help.js"></script>
+    <script type="text/javascript" src="./js/shell/builtins/pwd.js"></script>
+    <script type="text/javascript" src="./js/shell/builtins/_poedit.js"></script>
+    <script type="text/javascript" src="./js/commands/less.js"></script>
+    <script type="text/javascript" src="./js/commands/cp.js"></script>
+    <script type="text/javascript" src="./js/commands/groups.js"></script>
+    <script type="text/javascript" src="./js/commands/grep.js"></script>
+    <script type="text/javascript" src="./js/commands/whoami.js"></script>
+    <script type="text/javascript" src="./js/commands/ls.js"></script>
+    <script type="text/javascript" src="./js/commands/man.js"></script>
+    <script type="text/javascript" src="./js/commands/mkdir.js"></script>
+    <script type="text/javascript" src="./js/commands/mv.js"></script>
+    <script type="text/javascript" src="./js/commands/rm.js"></script>
+    <script type="text/javascript" src="./js/commands/sudo.js"></script>
+    <script type="text/javascript" src="./js/commands/touch.js"></script>
+    <script type="text/javascript" src="./js/commands/unzip.js"></script>
     <script type="text/javascript" src="./js/background.js"></script>
     <script type="text/javascript" src="./js/effects.js"></script>
     <script type="text/javascript" src="./js/terminus.utils.js"></script>
