prepare process management

--- a/game/terminus/webroot/index.html
+++ b/game/terminus/webroot/index.html
@@ -58,13 +58,13 @@
     <script type="text/javascript" src="engine/shell/Shell.js"></script>
     <script type="text/javascript" src="engine/shell/Key.js"></script>
     <script type="text/javascript" src="engine/shell/CommandStore.js"></script>
-    <script type="text/javascript" src="engine/shell/builtins/alias.js"></script>
-    <script type="text/javascript" src="engine/shell/builtins/cd.js"></script>
-    <script type="text/javascript" src="engine/shell/builtins/exit.js"></script>
-    <script type="text/javascript" src="engine/shell/builtins/echo.js"></script>
-    <script type="text/javascript" src="engine/shell/builtins/help.js"></script>
-    <script type="text/javascript" src="engine/shell/builtins/pwd.js"></script>
-    <script type="text/javascript" src="engine/shell/builtins/_poedit.js"></script>
+    <script type="text/javascript" src="engine/builtins/alias.js"></script>
+    <script type="text/javascript" src="engine/builtins/cd.js"></script>
+    <script type="text/javascript" src="engine/builtins/exit.js"></script>
+    <script type="text/javascript" src="engine/builtins/echo.js"></script>
+    <script type="text/javascript" src="engine/builtins/help.js"></script>
+    <script type="text/javascript" src="engine/builtins/pwd.js"></script>
+    <script type="text/javascript" src="engine/builtins/_poedit.js"></script>
     <script type="text/javascript" src="engine/commands/less.js"></script>
     <script type="text/javascript" src="engine/commands/cp.js"></script>
     <script type="text/javascript" src="engine/commands/groups.js"></script>
