--- a/game/terminus/webroot/index.html
+++ b/game/terminus/webroot/index.html
@@ -88,7 +88,7 @@
     <script type="text/javascript" src="engine/commands/touch.js"></script>
     <script type="text/javascript" src="engine/commands/unzip.js"></script>
 
-    <script type="text/javascript" src="js/terminus.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
     <script type="text/javascript" src="ui/init.js"></script>
     <script type="text/javascript" src="ui/effects.js"></script>
     <script type="text/javascript" src="ui/background.js"></script>
