[WIP] fixing bugs in test_engine

--- a/game/terminus/webroot/index.html
+++ b/game/terminus/webroot/index.html
@@ -26,7 +26,7 @@
     <!--<iframe id="pogen" style="display:none;"></iframe>-->
 
     <!-- lang data -->
-    <script type="text/javascript" src="js/terminus.dialog.fr.js"></script>
+    <script type="text/javascript" src="js/dialog.fr.js"></script>
     <!-- scripts -->
     <script type="text/javascript" src="engine/utils/seq.js"></script>
     <script type="text/javascript" src="engine/utils/dom.js"></script>
