fix mkdir to create writable dirs

--- a/src/index.html
+++ b/src/index.html
@@ -46,9 +46,10 @@
     <script type="text/javascript" src="./js/terminus.level1.js"></script>
     <script type="text/javascript" src="./js/terminus.level2.js"></script>
     <script type="text/javascript" src="./js/terminus.run.js"></script>
-<!--    <script type="text/javascript" src="./js/tests/test_academy.js"></script>-->
-<!--    <script type="text/javascript" src="./js/tests/test_commands.js"></script>-->
-<!--    <script type="text/javascript" src="./js/tests/test_battlescene.js"></script>-->
+    <script type="text/javascript" src="./js/tests/test_academy.js"></script>
+    <script type="text/javascript" src="./js/tests/test_commands.js"></script>
+    <script type="text/javascript" src="./js/tests/test_level2.js"></script>
+    <!--<script type="text/javascript" src="./js/tests/test_battlescene.js"></script>-->
 <!--    <script type="text/javascript" src="./js/engine/autoexplore.js"></script>-->
     <!-- endinject -->
   </body>
