--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 <!--    <div id="pics"><img id="scene"></img></div>-->
     <!-- inject:js -->
     <iframe id="pogen" style="display:none;"></iframe>
-    <script type="text/javascript" src="./js/_build/terminus.dialog.fr.js"></script>
+    <script type="text/javascript" src="./js/.build/terminus.dialog.fr.js"></script>
     <script type="text/javascript" src="./js/engine/howler.core.js"></script>
     <script type="text/javascript" src="./js/engine/js.js"></script>
     <script type="text/javascript" src="./js/engine/Gettext.js"></script>
