[WIP] fix build

--- a/game/terminus/webroot/testing.html
+++ b/game/terminus/webroot/testing.html
@@ -2,7 +2,7 @@
 <html>
   <head id='head'>
   <meta charset="utf-8" />
-  <script type="text/javascript" src="engine/utils/xhr.js"></script>
+  <script type="text/javascript" src="js.engine/utils/xhr.js"></script>
   <script>
   /*
    *  Load index.html and inject test scripts inside
